kustomize/redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      protocol: TCP
      targetPort: redis-6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  minReadySeconds: 10
  progressDeadlineSeconds: 30
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
      serviceAccountName: redis-svc-acct
      containers:
        - name: redis
          command:
            - redis-server
          args:
            - --appendonly
            - yes
            - --requirepass
            - $(NAUTOBOT_REDIS_PASSWORD)
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 3
            periodSeconds: 3
          image: redis:6-alpine
          imagePullPolicy: Always
          tty: true
          ports:
            - containerPort: 6379
              name: redis-6379
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 6379
