kustomize/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nautobot-ingress
spec:
  ingressClassName: "traefik"
  rules:
  - host: nautobot-base.server02.whitej6.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nautobot-web-service
            port:
              number: 8080
